--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-All in Clojure, some will be just a bunch of undocumented functions
+All in Clojure, some will be just a bunch of undocumented functions.
+
+Required Clojure version git HEAD (1.2.x ?)
